# cargo-unused-workspace-deps

./: Cargo.toml  README.md
.github/workflows/: build.yml
src/: lib.rs  main.rs
tests/: test.rs
tests/failing-workspace/: Cargo.toml
tests/passing-workspace/: Cargo.toml
tests/passing-workspace/test-crate/: Cargo.toml
