[package]
name = "cargo-unused-workspace-deps"
authors = ["Jarred Allen <jarredallen73@gmail.com"]
description = "Check for unused dependencies listed in a workspace-level `Cargo.toml` file."
version = "0.1.0"
edition = "2021"
repository = "https://github.com/JarredAllen/cargo-unused-workspace-deps"
license = "GPL"
categories = ["development-tools::build-utils"]
keywords = ["cargo", "workspace", "lint", "diagnostics"]
readme = "./README.md"

[dependencies]
cargo_metadata = "0.22.0"
clap = { version = "4.4.11", features = ["derive"] }
toml = "0.9.5"
toml_edit = "0.23.4"

[dev-dependencies]
mktemp = "0.5.1"

[lints.rust]
macro_use_extern_crate = "warn"
meta_variable_misuse = "warn"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
unsafe_code = "forbid"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
unused_qualifications = "warn"

[lints.clippy]
# Lint `pedantic` by default, but make an exception where I think it's too strict
pedantic = { level = "warn", priority = -1 }
missing_panics_doc = "allow"
# Lint `cargo` by default, but with exceptions
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"         # We can't control transitive dependencies
# Pick the "restriction" lints we want to use
allow_attributes_without_reason = "warn"
as_pointer_underscore = "warn"
as_underscore = "warn"
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
empty_enum_variants_with_brackets = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
float_cmp_const = "warn"
fn_to_numeric_cast_any = "warn"
if_then_some_else_none = "warn"
infinite_loop = "warn"
lossy_float_literal = "warn"
map_with_unused_argument_over_ranges = "warn"
missing_assert_message = "warn"
mixed_read_write_in_expression = "warn"
mod_module_files = "warn"
mutex_atomic = "warn"
needless_raw_strings = "warn"
panic_in_result_fn = "warn"
pathbuf_init_then_push = "warn"
pub_without_shorthand = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
renamed_function_params = "warn"
rest_pat_in_fully_bound_structs = "warn"
string_lit_chars_any = "warn"
string_to_string = "warn"
suspicious_xor_used_as_pow = "warn"
tests_outside_test_module = "warn"
try_err = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unseparated_literal_suffix = "warn"
unused_result_ok = "warn"
unused_trait_names = "warn"
unwrap_in_result = "warn"
